--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script>document.write(`<input id=i><a${o=" onclick="}'u.${H="innerHTML"}+="<li${o+H}=${H}.strike()>"+i.value'>➕<a${o}u.${H}="">❌</a><ol id=u>`)</script>
+<script>H="innerHTML",document.write(`<input id=i><a${o=" onclick="}'u[H]+="<li${o+H}=${H}.strike()>"+i.value'>+<a${o}u[H]="">X</a><ol id=u>`)</script>
